# curators

./: .gitignore  Cargo.toml  README.md  texture_map.kra
.cargo/: config.toml
assets/shaders/: chunk.wgsl
benches/: falling_sands.rs  mesh.rs  voxels.rs
crates/arch_core/: Cargo.toml
crates/arch_core/src/: cursor.rs  lib.rs  pathfind.rs  profiling.rs  ssao.rs
crates/arch_core/src/camera/: digsite.rs  first_person.rs  flying.rs  follow.rs  mod.rs
crates/arch_core/src/character/: controller.rs  input.rs  player.rs
crates/arch_core/src/character/kinematic/: mod.rs
crates/arch_core/src/input/: mod.rs
crates/arch_core/src/item/: grab.rs  mod.rs  prefab_registry.rs
crates/arch_core/src/map/: mod.rs  object.rs  terrain.rs
crates/arch_core/src/proc_mesh/: character.rs  fence.rs  mod.rs
crates/arch_core/src/sdf/: mod.rs  node.rs  ops.rs  voxel_rasterize.rs
crates/arch_core/src/sdf/ops/: intersection.rs  mod.rs  rotate.rs  round.rs  scale.rs  smooth_intersection.rs  smooth_subtraction.rs  smooth_union.rs  subtraction.rs  translate.rs  twist.rs  union.rs  xor.rs
crates/arch_core/src/sdf/primitive/: capsule.rs  cone.rs  cuboid.rs  cylinder.rs  ellipsoid.rs  hexagonal_prism.rs  mod.rs  octahedron.rs  plane.rs  pyramid.rs  rounded_box.rs  sphere.rs  torus.rs  triangle.rs
crates/arch_core/src/voxel/: commands.rs  mod.rs  painter.rs  pick.rs  raycast.rs  tree.rs  tree64.rs  voxel.rs  voxels.rs
crates/arch_core/src/voxel/collider/grid/: avian.rs  boxes.rs  mod.rs
crates/arch_core/src/voxel/editor/: mod.rs
crates/arch_core/src/voxel/mesh/: binary_greedy.rs  camera_inside.rs  chunk.rs  frustum_chunks.rs  lod.rs  mod.rs  remesh.rs  surface_net.rs
crates/arch_core/src/voxel/mesh/surface_net/: fast_surface_nets.rs  mod.rs  surface_nets_direct.rs
crates/arch_core/src/voxel/simulation/: data.rs  debug_dirty.rs  mod.rs  morton.rs  octree.rs  rle.rs  set.rs  view.rs
crates/arch_core/src/voxel/simulation/kinds/: liquid.rs  mod.rs  semisolid.rs
crates/bench/: Cargo.toml
crates/bench/src/: falling_sands.rs  lib.rs  surface_net.rs
examples/: bench_viewer.rs  bench_visualizer.rs  mesh_bench_viewer.rs  sdf_editor.rs  sdf_viewer.rs  sim_bench_viewer.rs
notes/: Gameplay loop.md  Persistent map generation.md  TODO.md
notes/.obsidian/: workspace.json
src/: camera.rs  cursor.rs  lib.rs  main.rs  ssao.rs  voxel.rs
src/camera/: digsite.rs  flying.rs  follow.rs  mod.rs
src/character/: controller.rs  input.rs  mod.rs  move_and_slide_1.rs  player.rs
src/character/kinematic/: mod.rs  movement.rs
src/digsite/: mod.rs
src/item/: mod.rs  prefab_registry.rs
src/map/: aabb.rs  mod.rs  object.rs  terrain.rs  voxel_aabb.rs
src/proc_mesh/: fence.rs  mod.rs
src/sdf/: mod.rs  ops.rs  voxel_rasterize.rs
src/voxel/: ass_mesh.rs  box_mesh.rs  brush.rs  chunk.rs  collider.rs  grid.rs  mod.rs  naive_mesh.rs  pick.rs  raycast.rs  surface_net.rs  variations  voxel.rs  voxel_aabb.rs  voxel_grid.rs  voxels.rs
src/voxel/collider/: avian.rs  border.rs  boxes.rs  mod.rs  trimesh.rs
src/voxel/collider/grid/: boxes.rs  mod.rs  trimesh.rs
src/voxel/mesh/: ass_mesh.rs  binary_greedy.rs  box_mesh.rs  chunk.rs  meshem.rs  mod.rs  surface_net.rs
src/voxel/mesh/binary_greedy/: material.rs  mesh_chunks.rs  mod.rs
src/voxel/simulation/: data.rs  mod.rs  parallel.rs
