[package]
name = "arch"
version = "0.1.0"
edition = "2024"

[dependencies]
# Bevy
bevy = { version = "0.16.1", features = ["experimental_pbr_pcss"] }
bevy_math = { version = "0.16.1", features = ["approx"] }
#bevy = { version = "0.16.0", features = ["dynamic_linking", "trace_tracy"] }
# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
    "max_level_debug",
    # "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    # "release_max_level_warn",
] }

# Bevy crates
bevy_enhanced_input = "0.14.1"
avian3d = "0.3.1"
#avian3d = { git = "https://github.com/Jondolf/avian", rev = "8a6953298" }
bevy_replicon = "0.34.3"
bevy_mod_outline = "0.10.2"
# bevy_edge_detection = { git = "https://github.com/aceeri/bevy_edge_detection", branch = "fixes" }
bevy_edge_detection = { path = "../bevy_edge_detection" }

# Randomness
rand_core = "0.9"
bevy_rand = { version = "0.11.1", features = ["rand_chacha", "wyrand"] }
bevy_prng = { version = "0.11.1", features = ["rand_chacha", "wyrand"] }
noiz = "0.2.0"

# Meshing
fast-surface-nets = "0.2.1"
# binary-greedy-meshing = "0.4.1"
binary-greedy-meshing = { git = "https://github.com/Aceeri/binary-greedy-meshing", branch = "main" }
# binary-greedy-meshing = { path = "../binary-greedy-meshing" }
bevy_meshem = { git = "https://github.com/aceeri/Meshem", branch = "bevy-0.16" }
#bevy_meshem = { path = "../Meshem" }

# Debug
iyes_perf_ui = "0.5.0"
#iyes_perf_ui = { git = "https://github.com/olekspickle/iyes_perf_ui", branch = "main" }
bevy-inspector-egui = "0.31.0"

# Other
rand = "0.9.1"
serde = "1.0.219"
mem_dbg = "0.3"
num-traits = "0.2"
num-derive = "0.4"
dashmap = "6.1.0"
thiserror = "2"
approx = "0.5.1"
lazy_static = "1"

[patch.crates-io]
#bevy_enhanced_input = { git = "https://github.com/projectharmonia/bevy_enhanced_input", rev = "21ddc08755" }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
pprof = { version = "0.15.0", features = ["flamegraph", "criterion"] }

[profile.release]
debug = true

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"


[[bench]]
name = "falling_sands"
harness = false

[[bench]]
name = "voxels"
harness = false